Fixed footer contact email alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -259,6 +259,10 @@ footer{
     margin: 0px;
 }
 
+.contact-email {
+    text-align: left;
+}
+
 footer a{
     text-decoration: none;
     color: var(--green);
